--- a/IA_221B0184_Teoria_de_Juegos_e_IA.ipynb
+++ b/IA_221B0184_Teoria_de_Juegos_e_IA.ipynb
@@ -32,12 +32,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "O_o70unS2OCI",
-        "outputId": "e26c83c3-1c38-4b57-940a-9a3bbc3d1d7c"
+        "outputId": "64a555a6-8c8c-41a1-a800-8aaa24d3f50b"
       },
       "source": [
         "!pip install nashpy"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -62,7 +62,7 @@
         "import nashpy as nash\n",
         "import numpy as np"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -81,7 +81,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "nU5fEXvb2B-m",
-        "outputId": "ddc6c5bc-5bdd-4a72-bb01-ebbcd5ca4c0c"
+        "outputId": "abc9f5e6-900d-4b48-c275-356b9e3eb9ec"
       },
       "source": [
         "A = np.array([[-8, 0], [-10, -1]]) # A es el jugador filas.\n",
@@ -89,7 +89,7 @@
         "juego1 = nash.Game(A,B)\n",
         "juego1"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -107,7 +107,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 11
         }
       ]
     },
@@ -127,14 +127,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "iSX4Gayf2dnd",
-        "outputId": "cf8a54b3-9c33-4c86-8f17-127fab3b0208"
+        "outputId": "5cf1701a-9523-4d5b-ee32-45f529e06c3c"
       },
       "source": [
         "equilibrios = juego1.support_enumeration()\n",
         "for eq in equilibrios:\n",
         "    print(eq)"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -161,7 +161,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "x7D5FL1e2nln",
-        "outputId": "86f2d152-06db-444c-90a7-a26f5a8d004d"
+        "outputId": "bb428f26-c6dd-4121-934a-85f2ed5b89ca"
       },
       "source": [
         "A2 = np.array([[6, 4, 4, 3],\n",
@@ -176,7 +176,7 @@
         "juego2 = nash.Game(A2, B2)\n",
         "juego2"
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -198,7 +198,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 13
         }
       ]
     },
@@ -218,14 +218,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "PTNTe5kH98Pj",
-        "outputId": "0e1b20cb-45bd-4950-9ff0-f628cba1f0ce"
+        "outputId": "a5c4f921-3e8c-449e-e13c-9612de983e33"
       },
       "source": [
         "equilibrios = juego2.support_enumeration()\n",
         "for eq in equilibrios:\n",
         "    print(eq)"
       ],
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -318,148 +318,6 @@
         "      return '.'\n",
         "\n",
         "    # 'O' es max, en este caso la IA:\n",
-        "    def max(self):\n",
-        "\n",
-        "        # Posibles valores para max:\n",
-        "        # -1 - pierde\n",
-        "        #  0 - empata\n",
-        "        #  1 - gana\n",
-        "\n",
-        "        # Inicializamos el resultado a -2, peor que lo peor\n",
-        "        maxv = -2\n",
-        "\n",
-        "        px = None\n",
-        "        py = None\n",
-        "\n",
-        "        resultado = self.es_fin()\n",
-        "\n",
-        "        # Si el juego acaba, debemos devolver el resultado:\n",
-        "        if resultado == 'X':\n",
-        "            return (-1, 0, 0)\n",
-        "        elif resultado == 'O':\n",
-        "            return (1, 0, 0)\n",
-        "        elif resultado == '.':\n",
-        "            return (0, 0, 0)\n",
-        "\n",
-        "        for i in range(0, 3):\n",
-        "            for j in range(0, 3):\n",
-        "                if self.estado_actual[i][j] == '.':\n",
-        "                    # Esto es una rama del juego:\n",
-        "                    self.estado_actual[i][j] = 'O'\n",
-        "                    (m, min_i, min_j) = self.min()\n",
-        "                    # Fijamos maxv si es necesario:\n",
-        "                    if m > maxv:\n",
-        "                        maxv = m\n",
-        "                        px = i\n",
-        "                        py = j\n",
-        "                    # Vaciamos el tablero\n",
-        "                    self.estado_actual[i][j] = '.'\n",
-        "        return (maxv, px, py)\n",
-        "\n",
-        "    # El jugador 'X' es min, un humano en este caso:\n",
-        "    def min(self):\n",
-        "\n",
-        "        #Inicio igual que para max:\n",
-        "        minv = 2\n",
-        "\n",
-        "        qx = None\n",
-        "        qy = None\n",
-        "\n",
-        "        resultado = self.es_fin()\n",
-        "\n",
-        "        if resultado == 'X':\n",
-        "            return (-1, 0, 0)\n",
-        "        elif resultado == 'O':\n",
-        "            return (1, 0, 0)\n",
-        "        elif resultado == '.':\n",
-        "            return (0, 0, 0)\n",
-        "\n",
-        "        for i in range(0, 3):\n",
-        "            for j in range(0, 3):\n",
-        "                if self.estado_actual[i][j] == '.':\n",
-        "                    self.estado_actual[i][j] = 'X'\n",
-        "                    (m, max_i, max_j) = self.max()\n",
-        "                    if m < minv:\n",
-        "                        minv = m\n",
-        "                        qx = i\n",
-        "                        qy = j\n",
-        "                    self.estado_actual[i][j] = '.'\n",
-        "\n",
-        "        return (minv, qx, qy)\n",
-        "\n",
-        "    def jugar(self):\n",
-        "      while True:\n",
-        "          self.dibujar_tablero()\n",
-        "          self.resultado = self.es_fin()\n",
-        "\n",
-        "          # Mostrar que el juego termino:\n",
-        "          if self.resultado != None:\n",
-        "              if self.resultado == 'X':\n",
-        "                  print('El ganador es X!')\n",
-        "              elif self.resultado == 'O':\n",
-        "                  print('El ganador es O!')\n",
-        "              elif self.resultado == '.':\n",
-        "                  print(\"Empate!\")\n",
-        "\n",
-        "              self.iniciar_juego()\n",
-        "              return\n",
-        "\n",
-        "          # If it's player's turn\n",
-        "          if self.turno_jugador == 'X':\n",
-        "\n",
-        "              while True:\n",
-        "\n",
-        "                  inicio = time.time()\n",
-        "                  (m, qx, qy) = self.min()\n",
-        "                  fin = time.time()\n",
-        "                  print('Evaluacion: {}s'.format(round(fin - inicio, 7)))\n",
-        "                  print('Movimientos Recomendados: X = {}, Y = {}'.format(qx, qy))\n",
-        "\n",
-        "                  px = int(input('X coordenada: '))\n",
-        "                  py = int(input('Y coordenada: '))\n",
-        "\n",
-        "                  (qx, qy) = (px, py)\n",
-        "\n",
-        "                  if self.es_valido(px, py):\n",
-        "                      self.estado_actual[px][py] = 'X'\n",
-        "                      self.turno_jugador = 'O'\n",
-        "                      break\n",
-        "                  else:\n",
-        "                      print('Movimiento no valido, prueba otra vez.')\n",
-        "\n",
-        "          # Turno de la IA\n",
-        "          else:\n",
-        "              (m, px, py) = self.max()\n",
-        "              self.estado_actual[px][py] = 'O'\n",
-        "              self.turno_jugador = 'X'"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "4c2dgySdN68q"
-      },
-      "source": [
-        "# Ejercicio: ¿Puedes modificar las funciones min y max para podar las ramas innecesarias? ¿Que le pasa al tiempo de procesamiento de la busqueda de la IA?"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "gkXqBCNgW--L"
-      },
-      "source": [
-        "Modifica las funciones min, max y jugar con los ejemplos siguientes rellenando los espacios:"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "TOB4zRutFHcd"
-      },
-      "source": [
         "    def max_alfa_beta(self, alfa, beta):\n",
         "              maxv = -2\n",
         "              px = None\n",
@@ -483,8 +341,7 @@
         "                              maxv = m\n",
         "                              px = i\n",
         "                              py = j\n",
-        "                          self.estado_actual = '.'\n",
-        "\n",
+        "                          self.estado_actual [i][j]= '.'\n",
         "\n",
         "                          if maxv >= beta:\n",
         "                              return (maxv, px, py)\n",
@@ -492,17 +349,8 @@
         "                          if maxv > alfa:\n",
         "                              alfa = maxv\n",
         "\n",
-        "              return (maxv, px, py)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "RDZcv29POvK-"
-      },
-      "source": [
+        "              return (maxv, px, py)\n",
+        "\n",
         "    def min_alfa_beta(self, alfa, beta):\n",
         "\n",
         "          minv = 2\n",
@@ -521,78 +369,171 @@
         "\n",
         "          for i in range(0, 3):\n",
         "              for j in range(0, 3):\n",
-        "                  if self.estado_actual[i][j] == '.':\n",
-        "                      self.estado_actual[i][j] = 'X'\n",
-        "                      (m, max_i, max_j) = self.max_alfa_beta(alfa, beta)\n",
-        "                      if m < minv:\n",
-        "                          minv = m\n",
-        "                          qx = i\n",
-        "                          qy = j\n",
-        "                      self.estado_actual[i][j] = '.'\n",
+        "                if self.estado_actual[i][j] == '.':\n",
+        "                    self.estado_actual[i][j] = 'X'\n",
+        "                    (m, max_i, max_j) = self.max_alfa_beta(alfa, beta)\n",
+        "                    if m < minv:\n",
+        "                        minv = m\n",
+        "                        qx = i\n",
+        "                        qy = j\n",
+        "                    self.estado_actual[i][j] = '.'\n",
         "\n",
-        "                      if minv <= alfa:\n",
-        "                          return (minv, qx, qy)\n",
+        "                    if minv <= alfa:\n",
+        "                        return (minv, qx, qy)\n",
         "\n",
-        "                      if minv < beta:\n",
-        "                          beta = minv\n",
+        "                    if minv < beta:\n",
+        "                        beta = minv\n",
         "\n",
-        "          return (minv, qx, qy)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "hajLHAjPR032"
-      },
-      "source": [
+        "          return (minv, qx, qy)\n",
+        "\n",
         "    def jugar_alfa_beta(self):\n",
         "      while True:\n",
         "          self.dibujar_tablero()\n",
         "          self.resultado = self.es_fin()\n",
         "\n",
         "          if self.resultado != None:\n",
-        "            if self.resultado == 'X':\n",
-        "                print('Gana X!')\n",
-        "            elif self.resultado == 'O':\n",
-        "                print('Gana O!')\n",
-        "            elif self.resultado == '.':\n",
+        "              if self.resultado == 'X':\n",
+        "                  print('Gana X!')\n",
+        "              elif self.resultado == 'O':\n",
+        "                  print('Gana O!')\n",
+        "              elif self.resultado == '.':\n",
         "                print(\"Empate\")\n",
         "\n",
         "\n",
-        "            self.iniciar_juego()\n",
-        "            return\n",
+        "              self.iniciar_juego()\n",
+        "              return\n",
         "\n",
         "          if self.turno_jugador == 'X':\n",
         "\n",
-        "            while True:\n",
-        "                inicio = time.time()\n",
-        "                (m, qx, qy) = self.min_alfa_beta(-2, 2)\n",
-        "                fin = time.time()\n",
-        "                print('Tiempo de evaluacion: {}s'.format(round(fin - inicio, 7)))\n",
-        "                print('Movimiento recomendado: X = {}, Y = {}'.format(qx, qy))\n",
+        "              while True:\n",
+        "                  inicio = time.time()\n",
+        "                  (m, qx, qy) = self.min_alfa_beta(-2, 2)\n",
+        "                  fin = time.time()\n",
+        "                  print('Tiempo de evaluacion: {}s'.format(round(fin - inicio, 7)))\n",
+        "                  print('Movimiento recomendado: X = {}, Y = {}'.format(qx, qy))\n",
         "\n",
-        "                px = int(input('X coordenada: '))\n",
-        "                py = int(input('Y coordenada: '))\n",
+        "                  px = int(input('X coordenada: '))\n",
+        "                  py = int(input('Y coordenada: '))\n",
         "\n",
-        "                qx = px\n",
-        "                qy = py\n",
+        "                  qx = px\n",
+        "                  qy = py\n",
         "\n",
-        "                if self.es_valido(px, py):\n",
-        "                    self.estado_actual[px][py] = 'X'\n",
-        "                    self.turno_jugador = 'O'\n",
-        "                    break\n",
-        "                else:\n",
-        "                    print('Movimiento no valido. Prueba con otro movimiento.')\n",
+        "                  if self.es_valido(px, py):\n",
+        "                      self.estado_actual[px][py] = 'X'\n",
+        "                      self.turno_jugador = 'O'\n",
+        "                      break\n",
+        "                  else:\n",
+        "                      print('Movimiento no valido. Prueba con otro movimiento.')\n",
         "\n",
         "          else:\n",
         "            (m, px, py) = self.max_alfa_beta(-2, 2)\n",
         "            self.estado_actual[px][py] = 'O'\n",
         "            self.turno_jugador = 'X'"
       ],
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "g = Juego()\n",
+        "g.jugar_alfa_beta()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LGd_su88z4P9",
+        "outputId": "14388fed-aeee-4002-b328-27a376e4103b"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            ".| .| .| \n",
+            ".| .| .| \n",
+            ".| .| .| \n",
+            "\n",
+            "Tiempo de evaluacion: 0.0790823s\n",
+            "Movimiento recomendado: X = 0, Y = 0\n",
+            "X coordenada: 2\n",
+            "Y coordenada: 0\n",
+            ".| .| .| \n",
+            ".| .| .| \n",
+            "X| .| .| \n",
+            "\n",
+            ".| .| .| \n",
+            ".| O| .| \n",
+            "X| .| .| \n",
+            "\n",
+            "Tiempo de evaluacion: 0.006609s\n",
+            "Movimiento recomendado: X = 0, Y = 0\n",
+            "X coordenada: 2\n",
+            "Y coordenada: 1\n",
+            ".| .| .| \n",
+            ".| O| .| \n",
+            "X| X| .| \n",
+            "\n",
+            ".| .| .| \n",
+            ".| O| .| \n",
+            "X| X| O| \n",
+            "\n",
+            "Tiempo de evaluacion: 0.0002313s\n",
+            "Movimiento recomendado: X = 0, Y = 0\n",
+            "X coordenada: 0\n",
+            "Y coordenada: 0\n",
+            "X| .| .| \n",
+            ".| O| .| \n",
+            "X| X| O| \n",
+            "\n",
+            "X| .| .| \n",
+            "O| O| .| \n",
+            "X| X| O| \n",
+            "\n",
+            "Tiempo de evaluacion: 7.15e-05s\n",
+            "Movimiento recomendado: X = 1, Y = 2\n",
+            "X coordenada: 1\n",
+            "Y coordenada: 2\n",
+            "X| .| .| \n",
+            "O| O| X| \n",
+            "X| X| O| \n",
+            "\n",
+            "X| O| .| \n",
+            "O| O| X| \n",
+            "X| X| O| \n",
+            "\n",
+            "Tiempo de evaluacion: 1.96e-05s\n",
+            "Movimiento recomendado: X = 0, Y = 2\n",
+            "X coordenada: 0\n",
+            "Y coordenada: 2\n",
+            "X| O| X| \n",
+            "O| O| X| \n",
+            "X| X| O| \n",
+            "\n",
+            "Empate\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "4c2dgySdN68q"
+      },
+      "source": [
+        "# Ejercicio: ¿Puedes modificar las funciones min y max para podar las ramas innecesarias? ¿Que le pasa al tiempo de procesamiento de la busqueda de la IA?"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "gkXqBCNgW--L"
+      },
+      "source": [
+        "El tiempo de procesamiento de la busqueda de la mejor opcion se va reduciendo significativamente tras las elecciones que daba, se puede comprobar que cada vez el tiempo era menor en cada busqueda."
+      ]
     }
   ]
 }
